# TP-tasks

.github/workflows/: temp.yml
task1/: run.sh
task2/: CMakeLists.txt
task2/A/: preparing.py
task2/B/: CMakeLists.txt  Makefile  cmake_install.cmake
task2/C/: main.cpp  main_test.cpp
task2/googletest-master/: CTestTestfile.cmake  Makefile  cmake_install.cmake
task2/googletest-master/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
task2/googletest-master/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
task3/: CMakeLists.txt
